--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -20,18 +20,18 @@
   align-items: center;
   text-align: center;
   box-sizing: border-box;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-  
-  background: #FFF;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+
+  background: #fff;
   color: #212121;
 }
 
 .isDark {
   background: #000;
-  color: #FFE300;
+  color: #ffe300;
 }
 
 .isLight {
-  background: #4BD5EE;
-  color: #FFE300;
+  background: #4bd5ee;
+  color: #ffe300;
 }
