--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -5,13 +5,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  background-color: #3C4858;
+  background-color: #3c4858;
   border: 1px solid #333333;
   border-radius: 8px;
 }
 
 .ErrorMessage {
-  color: #E27164;
+  color: #e27164;
   font-weight: bold;
   align-self: flex-start;
   padding: 0px;
