--- a/src/components/common/CardCraftLink/CardCraftLink.module.css
+++ b/src/components/common/CardCraftLink/CardCraftLink.module.css
@@ -3,13 +3,16 @@
   border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
-  width: 280px;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  width: 280px;
+  margin: 8px 16px;
 }
 
 .CardImage {
   border-radius: 8px 8px 0px 0px;
-  width: 280px;
+  width: 60px;
 }
 
 .CardDetails {
@@ -18,20 +21,9 @@
   padding: 0 16px;
 }
 
-.CardTitle {
+.CardName {
   border-radius: 8px 8px 0px 0px;
   color: inherit;
   font-weight: bold;
-  font-size: 22px;
-}
-
-.CardSummary {
-  color: #abb1ba;
-  font-weight: normal;
-  display: block;
-  display: -webkit-box;
-  -webkit-line-clamp: 8;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-size: 20px;
 }
