--- a/src/components/common/CardCharacterLink/CardCharacterLink.module.css
+++ b/src/components/common/CardCharacterLink/CardCharacterLink.module.css
@@ -5,31 +5,25 @@
   color: #ffe300;
   cursor: pointer;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 280px;
-}
-
-.CardName {
-  border-radius: 8px 8px 0px 0px;
-  color: inherit;
-  font-weight: bold;
-  font-size: 18px;
-  text-align: center;
+  margin: 8px 16px;
 }
 
 .CardImage {
   border-radius: 8px;
-  padding: 0 16px;
-  width: 248px;
+  width: 60px;
 }
 
 .CardDetails {
   color: inherit;
   background-color: inherit;
   padding: 0 16px;
-  font-size: 14px;
 }
 
-.CardDataLabel {
-  color: #4bd5ee;
+.CardName {
+  border-radius: 8px 8px 0px 0px;
+  color: inherit;
+  font-weight: bold;
+  font-size: 20px;
 }
