--- a/src/components/common/CardCharacter/CardCharacter.module.css
+++ b/src/components/common/CardCharacter/CardCharacter.module.css
@@ -1,6 +1,5 @@
 .Card {
   background-color: #333333;
-  border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
   display: flex;
@@ -27,4 +26,15 @@
   background-color: inherit;
   padding: 0 16px;
   font-size: 14px;
+  border-radius: 8px;
+}
+
+.DarkTheme {
+  background-color: #333333;
+  color: #ffe300;
+}
+
+.LightTheme {
+  background-color: #ffffff;
+  color: #4bd5ee;
 }
