--- a/src/components/common/CardChart/CardChart.module.css
+++ b/src/components/common/CardChart/CardChart.module.css
@@ -1,3 +1,15 @@
 .Chart {
   width: 280px;
 }
+
+.DarkTheme {
+  color: #ffe300;
+}
+
+.LightTheme {
+  color: #4bd5ee;
+}
+
+.DarkTheme .apexcharts-canvas {
+  background: yellow;
+}
