--- a/src/components/common/CardEpisode/CardEpisode.module.css
+++ b/src/components/common/CardEpisode/CardEpisode.module.css
@@ -1,6 +1,5 @@
 .Card {
   background-color: #333333;
-  border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
   width: 280px;
@@ -35,4 +34,14 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.DarkTheme {
+  background-color: #333333;
+  color: #ffe300;
+}
+
+.LightTheme {
+  background-color: #ffffff;
+  color: #4bd5ee;
 }
