--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -7,7 +7,7 @@
   background-color: transparent;
   cursor: pointer;
   outline: none;
-
+  /* Custom Styles */
   font-weight: bold;
   border-radius: 4px;
   padding: 6px 16px;
@@ -21,17 +21,17 @@
   text-align: center;
   box-sizing: border-box;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-
+  /* Default Theme */
   background: #fff;
   color: #212121;
 }
 
-.isDark {
-  background: #000;
+.DarkTheme {
+  background: #4bd5ee;
   color: #ffe300;
 }
 
-.isLight {
-  background: #4bd5ee;
+.LightTheme {
+  background: #000;
   color: #ffe300;
 }
