--- a/src/components/common/CardCharacterLink/CardCharacterLink.module.css
+++ b/src/components/common/CardCharacterLink/CardCharacterLink.module.css
@@ -1,6 +1,5 @@
 .Card {
   background-color: #333333;
-  border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
   cursor: pointer;
@@ -11,7 +10,7 @@
 }
 
 .CardImage {
-  border-radius: 8px;
+  border-radius: 8px 0 0 8px;
   width: 60px;
 }
 
@@ -28,6 +27,12 @@
   font-size: 20px;
 }
 
-.Test {
-  color: inherit;
+.DarkTheme {
+  background-color: #333333;
+  color: #ffe300;
+}
+
+.LightTheme {
+  background-color: #ffffff;
+  color: #4bd5ee;
 }
