--- a/src/components/common/CardCraftLink/CardCraftLink.module.css
+++ b/src/components/common/CardCraftLink/CardCraftLink.module.css
@@ -1,6 +1,5 @@
 .Card {
   background-color: #333333;
-  border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
   cursor: pointer;
@@ -11,7 +10,7 @@
 }
 
 .CardImage {
-  border-radius: 8px 8px 0px 0px;
+  border-radius: 8px 0 0 8px;
   width: 60px;
 }
 
@@ -26,4 +25,14 @@
   color: inherit;
   font-weight: bold;
   font-size: 20px;
+}
+
+.DarkTheme {
+  background-color: #333333;
+  color: #ffe300;
+}
+
+.LightTheme {
+  background-color: #ffffff;
+  color: #4bd5ee;
 }
