Apply format changes

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ code {
 }
 
 .LightTheme {
-  background: #E8EAED;
-  color: #4E5B6E;
+  background: #e8eaed;
+  color: #4e5b6e;
 }
 
 .DarkTheme {
