--- a/src/components/common/CardEpisodeSummary/CardEpisodeSummary.module.css
+++ b/src/components/common/CardEpisodeSummary/CardEpisodeSummary.module.css
@@ -1,6 +1,5 @@
 .Card {
   background-color: #333333;
-  border: 1px solid #3c4858;
   border-radius: 8px;
   color: #ffe300;
   cursor: pointer;
@@ -23,18 +22,12 @@
   font-size: 20px;
 }
 
-.CardTitle {
-  border-radius: 8px 8px 0px 0px;
-  color: inherit;
-  font-weight: bold;
-  font-size: 20px;
-  color: #4bd5ee;
+.DarkTheme {
+  background-color: #333333;
+  color: #abb1ba;
 }
 
-.CardLabel {
-  color: #4bd5ee;
-}
-
-.CardLabelValue {
-  color: #ffe300;
+.LightTheme {
+  background: #ffffff;
+  color: #4e5b6e;
 }
