--- a/src/components/Starships/Starship.module.css
+++ b/src/components/Starships/Starship.module.css
@@ -19,6 +19,7 @@
   font-weight: bold;
   font-size: 24px;
   margin: 0px;
+  margin-bottom: 16px;
   padding: 0px;
   text-align: center;
 }
@@ -28,6 +29,8 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  border-top: 1px solid #333333;
+  padding: 16px 0;
 }
 
 .ListContainer {
@@ -42,9 +45,9 @@
   font-size: 18px;
   margin: 0px;
   padding: 0px;
-  padding-bottom: 16px;
+  padding: 16px 0px;
   text-align: center;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #333333;
 }
 
 .DarkTheme {
