--- a/src/components/common/CardEpisodeHeader/CardEpisodeHeader.module.css
+++ b/src/components/common/CardEpisodeHeader/CardEpisodeHeader.module.css
@@ -5,12 +5,15 @@
   cursor: pointer;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 16px;
 }
 
 .CardImage {
   border-radius: 8px 0 0 8px;
-  width: 260px;
+  max-width: 280px;
+  flex: 1;
 }
 
 .CardDetails {
@@ -21,7 +24,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  flex: 6;
 }
 
 .CardEpiside {
