--- a/src/components/common/LoginForm/LoginForm.module.css
+++ b/src/components/common/LoginForm/LoginForm.module.css
@@ -5,8 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  background-color: #3c4858;
-  border: 1px solid #333333;
   border-radius: 8px;
 }
 
@@ -21,4 +19,13 @@
 
 .Form input {
   margin-bottom: 8px;
+}
+
+
+.DarkTheme {
+  background-color: #333 ;
+}
+
+.LightTheme {
+  background-color: white ;
 }
