--- a/src/components/common/LoginForm/LoginForm.module.css
+++ b/src/components/common/LoginForm/LoginForm.module.css
@@ -1,12 +1,10 @@
 .Form {
-  width: 480px;
+  width: 420px;
   margin: 0 auto;
   padding: 56px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  background-color: #3c4858;
-  border: 1px solid #333333;
   border-radius: 8px;
 }
 
@@ -21,4 +19,12 @@
 
 .Form input {
   margin-bottom: 8px;
+}
+
+.DarkTheme {
+  background-color: #333;
+}
+
+.LightTheme {
+  background-color: white;
 }
