--- a/src/components/common/CardCraft/CardCraft.module.scss
+++ b/src/components/common/CardCraft/CardCraft.module.scss
@@ -1,9 +1,12 @@
+@import '../../../colors.scss';
+
 .Card {
-  background-color: #333333;
+  background-color: $dark-charcoal;
   border-radius: 8px;
-  color: #ffe300;
+  color: $vivid-yellow;
   display: flex;
   flex-direction: column;
+  margin: 0 16px;
   width: 280px;
 }
 
@@ -29,12 +32,16 @@
   border-radius: 8px;
 }
 
+.CardDataLabel {
+  color: $crayola;
+}
+
 .DarkTheme {
-  background-color: #333333;
-  color: #ffe300;
+  background-color: $dark-charcoal;
+  color: $vivid-yellow;
 }
 
 .LightTheme {
-  background-color: #ffffff;
-  color: #4bd5ee;
+  background-color: $white;
+  color: $crayola;
 }
