--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import '../../../colors.scss';
+
 .Button {
   padding: 0;
   border: none;
@@ -22,16 +24,16 @@
   box-sizing: border-box;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   /* Default Theme */
-  background: #fff;
+  background: $white;
   color: #212121;
 }
 
 .DarkTheme {
-  background: #4bd5ee;
-  color: #ffe300;
+  background: $crayola;
+  color: $vivid-yellow;
 }
 
 .LightTheme {
-  background: #000;
-  color: #ffe300;
+  background: $black;
+  color: $vivid-yellow;
 }
