--- a/src/components/common/CardCharacter/CardCharacter.module.scss
+++ b/src/components/common/CardCharacter/CardCharacter.module.scss
@@ -1,10 +1,11 @@
+@import '../../../colors.scss';
+
 .Card {
-  background-color: #333333;
+  background-color: $dark-charcoal;
   border-radius: 8px;
-  color: #ffe300;
+  color: $vivid-yellow;
   display: flex;
   flex-direction: column;
-  margin: 0 16px;
   width: 280px;
 }
 
@@ -30,16 +31,12 @@
   border-radius: 8px;
 }
 
-.CardDataLabel {
-  color: #4bd5ee;
-}
-
 .DarkTheme {
-  background-color: #333333;
-  color: #ffe300;
+  background-color: $dark-charcoal;
+  color: $vivid-yellow;
 }
 
 .LightTheme {
-  background-color: #ffffff;
-  color: #4bd5ee;
+  background-color: $white;
+  color: $crayola;
 }
