--- a/src/components/common/CardCraftLink/CardCraftLink.module.scss
+++ b/src/components/common/CardCraftLink/CardCraftLink.module.scss
@@ -1,7 +1,9 @@
+@import '../../../colors.scss';
+
 .Card {
-  background-color: #333333;
+  background-color: $dark-charcoal;
   border-radius: 8px;
-  color: #ffe300;
+  color: $vivid-yellow;
   cursor: pointer;
   display: flex;
   flex-direction: row;
@@ -28,11 +30,11 @@
 }
 
 .DarkTheme {
-  background-color: #333333;
-  color: #ffe300;
+  background-color: $dark-charcoal;
+  color: $vivid-yellow;
 }
 
 .LightTheme {
-  background-color: #ffffff;
-  color: #4bd5ee;
+  background-color: $white;
+  color: $crayola;
 }
