--- a/src/components/common/CardEpisode/CardEpisode.module.scss
+++ b/src/components/common/CardEpisode/CardEpisode.module.scss
@@ -1,7 +1,9 @@
+@import '../../../colors.scss';
+
 .Card {
-  background-color: #333333;
+  background-color: $dark-charcoal;
   border-radius: 8px;
-  color: #ffe300;
+  color: $vivid-yellow;
   width: 280px;
   margin: 8px 16px;
   cursor: pointer;
@@ -26,7 +28,7 @@
 }
 
 .CardSummary {
-  color: #abb1ba;
+  color: $cadet-blue;
   font-weight: normal;
   display: block;
   display: -webkit-box;
@@ -37,11 +39,11 @@
 }
 
 .DarkTheme {
-  background-color: #333333;
-  color: #ffe300;
+  background-color: $dark-charcoal;
+  color: $vivid-yellow;
 }
 
 .LightTheme {
-  background-color: #ffffff;
-  color: #4bd5ee;
+  background-color: $white;
+  color: $crayola;
 }
