--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 body {
   margin: 0;
   padding-top: 70px;
@@ -12,11 +14,11 @@ code {
 }
 
 .LightTheme {
-  background: #e8eaed;
-  color: #4e5b6e;
+  background: $bright-grey;
+  color: $black-coral;
 }
 
 .DarkTheme {
-  background: #000;
-  color: #abb1ba;
+  background: $black;
+  color: $cadet-blue;
 }
