--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,12 +1,12 @@
 $white: #ffffff;
 $black: #000000;
-$crayola: #4BD5EE;
-$vivid-yellow: #FFE300;
-$ash-grey: #EFF2F7;
-$bright-grey: #E8EAED;
-$coconut-white: #E5E9F2;
-$charcoal: #3C4858;
+$crayola: #4bd5ee;
+$vivid-yellow: #ffe300;
+$ash-grey: #eff2f7;
+$bright-grey: #e8eaed;
+$coconut-white: #e5e9f2;
+$charcoal: #3c4858;
 $dark-charcoal: #333333;
-$black-coral: #4E5B6E;
+$black-coral: #4e5b6e;
 $gunmetal: #273444;
-$cadet-blue: #ABB1BA;
+$cadet-blue: #abb1ba;
