Switch css to sass and use variables (#10)
* Apply format changes

* Switch CSS to SASS. Add color constants

* Apply format issues

--- a/src/components/common/CardEpisodeSummary/CardEpisodeSummary.module.scss
+++ b/src/components/common/CardEpisodeSummary/CardEpisodeSummary.module.scss
@@ -1,7 +1,9 @@
+@import '../../../colors.scss';
+
 .Card {
-  background-color: #333333;
+  background-color: $dark-charcoal;
   border-radius: 8px;
-  color: #ffe300;
+  color: $vivid-yellow;
   cursor: pointer;
   display: flex;
   flex-direction: row;
@@ -23,11 +25,11 @@
 }
 
 .DarkTheme {
-  background-color: #333333;
-  color: #abb1ba;
+  background-color: $dark-charcoal;
+  color: $cadet-blue;
 }
 
 .LightTheme {
-  background: #ffffff;
-  color: #4e5b6e;
+  background: $white;
+  color: $black-coral;
 }
