Integrade SASS with BEM

--- a/src/components/Episodes/Episode.module.scss
+++ b/src/components/Episodes/Episode.module.scss
@@ -1,6 +1,6 @@
 @import '../../colors.scss';
 
-.Container {
+.EpisodeCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
