--- a/src/components/common/CardCharacterLink/CardCharacterLink.module.scss
+++ b/src/components/common/CardCharacterLink/CardCharacterLink.module.scss
@@ -1,33 +1,5 @@
 @import '../../../colors.scss';
-
-.Card {
-  background-color: $dark-charcoal;
-  border-radius: 8px;
-  color: $vivid-yellow;
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  width: 280px;
-  margin: 8px 16px;
-}
-
-.CardImage {
-  border-radius: 8px 0 0 8px;
-  width: 60px;
-}
-
-.CardDetails {
-  color: inherit;
-  background-color: inherit;
-  padding: 0 16px;
-}
-
-.CardName {
-  border-radius: 8px 8px 0px 0px;
-  color: inherit;
-  font-weight: bold;
-  font-size: 20px;
-}
+@import '../../../constants.scss';
 
 .DarkTheme {
   background-color: $dark-charcoal;
@@ -37,4 +9,31 @@
 .LightTheme {
   background-color: $white;
   color: $crayola;
+}
+
+.Card {
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  width: $card-width;
+  margin: 8px 16px;
+  border-radius: 8px;
+
+  &__Image {
+    border-radius: 8px 0 0 8px;
+    width: 60px;
+  }
+
+  &__Title {
+    color: inherit;
+    background-color: inherit;
+    padding: 0 16px;
+  }
+
+  &__Text {
+    color: inherit;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 8px 8px 0 0;
+  }
 }
