--- a/src/components/Characters/Character.module.scss
+++ b/src/components/Characters/Character.module.scss
@@ -1,51 +1,49 @@
 @import '../../colors.scss';
 
-.Container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-.Header {
-  color: inherit;
-  font-weight: bold;
-  font-size: 24px;
-  margin: 0px;
-  margin-bottom: 16px;
-  padding: 0px;
-  padding-bottom: 16px;
-  text-align: center;
-  border-bottom: 1px solid $dark-charcoal;
-}
-
-.Body {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.ListContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.ListTitle {
-  color: inherit;
-  font-weight: bold;
-  font-size: 18px;
-  margin: 0px;
-  padding: 16px 0px;
-  text-align: center;
-  border-bottom: 1px solid $dark-charcoal;
-}
-
 .DarkTheme {
   color: $vivid-yellow;
 }
 
 .LightTheme {
   color: $crayola;
+}
+
+.CharacterCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+
+  &__Header {
+    color: inherit;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 0 0 16px 0;
+    padding: 0 0 16px 0;
+    text-align: center;
+    border-bottom: 1px solid $dark-charcoal;
+  }
+
+  &__Body {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__ShipList {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  &__ShipListTitle {
+    color: inherit;
+    font-weight: bold;
+    font-size: 18px;
+    margin: 0;
+    padding: 16px 0;
+    text-align: center;
+    border-bottom: 1px solid $dark-charcoal;
+  }
 }
