--- a/src/components/common/CardStarshipLink/CardStarshipLink.module.scss
+++ b/src/components/common/CardStarshipLink/CardStarshipLink.module.scss
@@ -4,60 +4,36 @@
 .DarkTheme {
   background-color: $dark-charcoal;
   color: $vivid-yellow;
-
-  .Card__Title {
-    color: $crayola;
-  }
 }
 
 .LightTheme {
   background-color: $white;
   color: $crayola;
-  
-  .Card__Title {
-    color: $dark-charcoal;
-  }
 }
 
 .Card {
-  border-radius: 8px;
   cursor: pointer;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 16px;
+  width: $card-width;
+  margin: 8px 16px;
+  border-radius: 8px;
 
   &__Image {
     border-radius: 8px 0 0 8px;
-    max-width: $card-width;
-    flex: 1;
-  }
-
-  &__Details {
-    color: inherit;
-    background-color: inherit;
-    padding: 0 16px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 6;
+    width: 60px;
   }
 
   &__Title {
     color: inherit;
-    font-weight: bold;
-    font-size: 36px;
-    padding: 0;
-    margin: 0;
+    background-color: inherit;
+    padding: 0 16px;
   }
 
-  &__Subtitle {
+  &__Text {
     border-radius: 8px 8px 0px 0px;
     color: inherit;
     font-weight: bold;
     font-size: 20px;
-    color: $crayola;
   }
 }
