--- a/src/components/common/LoginForm/LoginForm.module.scss
+++ b/src/components/common/LoginForm/LoginForm.module.scss
@@ -1,5 +1,13 @@
 @import '../../../colors.scss';
 
+.DarkTheme {
+  background-color: #333;
+}
+
+.LightTheme {
+  background-color: white;
+}
+
 .Form {
   width: 420px;
   margin: 0 auto;
@@ -8,25 +16,18 @@
   flex-direction: column;
   align-items: flex-end;
   border-radius: 8px;
+
+  input {
+    margin-bottom: 8px;
+  }
 }
 
 .ErrorMessage {
   color: #e27164;
   font-weight: bold;
   align-self: flex-start;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   margin-bottom: 8px;
 }
 
-.Form input {
-  margin-bottom: 8px;
-}
-
-.DarkTheme {
-  background-color: #333;
-}
-
-.LightTheme {
-  background-color: white;
-}
