--- a/src/screens/Characters/Character.module.scss
+++ b/src/screens/Characters/Character.module.scss
@@ -13,6 +13,11 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
+  padding-bottom: 30px;
+  
+  button {
+    margin: 0 auto;
+  }
 
   &__Header {
     color: inherit;
