--- a/src/screens/Episodes/Episode.module.scss
+++ b/src/screens/Episodes/Episode.module.scss
@@ -5,4 +5,9 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
+  padding-bottom: 30px;
+
+  button {
+    margin: 0 auto;
+  }
 }
