--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,6 +12,7 @@
 
 .Button {
   padding: 0;
+  margin: 0 auto;
   border: none;
   font: inherit;
   font-family: inherit;
@@ -27,6 +28,7 @@
   padding: 6px 16px;
   min-height: 24px;
   min-width: 64px;
+  max-width: 128px;
   line-height: 24px;
   letter-spacing: 1px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.26);
