--- a/src/screens/Characters/Character.module.scss
+++ b/src/screens/Characters/Character.module.scss
@@ -13,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
+  padding-bottom: 30px;
 
   &__Header {
     color: inherit;
