--- a/src/components/CardLink/CardLink.module.scss
+++ b/src/components/CardLink/CardLink.module.scss
@@ -18,16 +18,24 @@
   }
 
   &__Title {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     color: inherit;
     background-color: inherit;
     padding: 0 16px;
+    margin: 0;
+    border-radius: 0 8px 8px 0;
   }
 
   &__Text {
     color: inherit;
     font-weight: bold;
     font-size: 20px;
-    border-radius: 8px 8px 0 0;
+    padding: 0;
+    margin: 0;
+    border-radius: 0 8px 8px 0;
   }
 }
 
